--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section class="banner pb-5">
     <div style="height: 100vh; background-image: url(https://cdn.pixabay.com/photo/2017/03/28/12/06/chairs-2181916_960_720.jpg); background-size: cover; background-position: center;" class="position-relative w-100">
         <div class="position-absolute text-white d-flex flex-column align-items-center justify-content-center" style="top: 0; right: 0; bottom: 0; left: 0; background-color: rgba(0,0,0,.6);">
-          <span>WEL COME TO</span>
+          <!-- <span>WEL COME TO</span> -->
           <h1 class="mb-4 mt-2 font-weight-bold text-center">Let's meet with our team members</h1>
           <div class="text-center">
             <!-- hover background-color: white; color: black; -->
@@ -91,13 +91,14 @@
         <div class="row justify-content-center text-center">
           <div class="col-md-8 col-lg-6">
             <div class="header-section">
-              <h3 class="small-title">Our Experts</h3>
-              <h2 class="title">NBICT LAB's All Members</h2>
+              <!-- <h3 class="small-title">Our Experts</h3> -->
+              <h2 class="small-title">Our Experts</h2>
+              <!-- <h2 class="title">NBICT LAB's All Members</h2> -->
             </div>
           </div>
         </div>
         <!-- / End Header Section -->
-        <div class="row">
+        <div class="row justify-content-around">
           <!-- Start Single Person -->
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="https://nbict-lab.github.io/sadhan.verma.github.io/"></a>
@@ -110,12 +111,14 @@
               </div>
               <div class="person-info">
                 <h3 class="full-name">Sadhan Verma</h3>
-                <span class="speciality">Founder & CEO of NBICT LAB</span>
+                <span class="speciality">Founder & CEO </span>
               </div>
             </div>
             </a>
           </div>
+        </div>  
           <!-- / End Single Person -->
+          <div class="row">
           <!-- Start Single Person -->
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="">
@@ -128,7 +131,7 @@
               </div>
               <div class="person-info">
                 <h3 class="full-name">Habiba Himu</h3>
-                <span class="speciality">Senior Executive of NBICT LAB</span>
+                <span class="speciality">Senior Executive </span>
               </div>
             </div>
             </a>
@@ -146,7 +149,7 @@
               </div>
               <div class="person-info">
                 <h3 class="full-name">Masuda Mimi</h3>
-                <span class="speciality">Co-Executive (Communication & Publication)</span>
+                <span class="speciality">Co-Executive </span>
               </div>
             </div>
             </a>
