--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
         <!-- / End Header Section -->
-        <div class="row justify-content-around">
+        <div class="row justify-content-center">
           <!-- Start Single Person -->
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="https://nbict-lab.github.io/sadhan.verma.github.io/"></a>
