--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-md-8 col-lg-6">
             <div class="header-section">
               <!-- <h3 class="small-title">Our Experts</h3> -->
-              <h2 class="small-title">Our Experts</h2>
+              <h2 class="title">Our Experts</h2>
               <!-- <h2 class="title">NBICT LAB's All Members</h2> -->
             </div>
           </div>
