--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- / End Header Section -->
         <div class="row justify-content-center">
           <!-- Start Single Person -->
-          <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="col-sm-6 col-lg-4 col-xl-3  order-sm-2 ">
             <a href="">
             <div class="single-person">
               <div class="person-image">
@@ -118,7 +118,7 @@
           </div>
           <!-- / End Single Person -->
            <!-- Start Single Person -->
-           <div class="col-sm-6 col-lg-4 col-xl-3">
+           <div class="col-sm-7 col-lg-4 col-xl-3 order-sm-1 order-md-1 order-lg-2">
             <a href="https://nbict-lab.github.io/sadhan.verma.github.io/">
             <div class="single-person ceo">
               <div class="person-image">
@@ -136,7 +136,7 @@
           </div>
           <!-- / End Single Person -->
           <!-- Start Single Person -->
-          <div class="col-sm-6 col-lg-4 col-xl-3">
+          <div class="col-sm-6 col-lg-4 col-xl-3 order-sm-2">
             <a href="">
             <div class="single-person">
               <div class="person-image">
