--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
           <!-- / End Single Person -->
           <!-- Start Single Person -->
-          <div class="row">
+          <div class="row justify-content-center">
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="">
             <div class="single-person">
@@ -174,7 +174,7 @@
           </div>
           <!-- / End Single Person -->
           <!-- Start Single Person -->
-          <div class="col-sm-6 col-lg-4 col-xl-3">
+          <!-- <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="">
             <div class="single-person">
               <div class="person-image">
@@ -189,7 +189,7 @@
               </div>
             </div>
             </a>
-          </div>
+          </div> -->
           <!-- / End Single Person -->
           <!-- Start Single Person -->
           <div class="col-sm-6 col-lg-4 col-xl-3">
