--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <section>
     <!-- KD CODE-->
     <div class="d-flex flex-row justify-content-between kd-on">
-      <div class="p-2 kd-on">
-        <a href="">
-          <img src="NBICTLAB-LOGO.png" alt="NBICT LAB LOGO">
+      <div class=" kd-on">
+        <a href="" >
+          <img src="NBICTLAB_LOGO.png" alt="NBICT LAB LOGO" class="pt-0">
+          </a>
       </div>
       <div class=" kd-on pt-3">
         <a href="support@nbict.org" class="" >📧 support@nbict.org </a>
