--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- <section></section> -->
   <section>
     <!-- KD CODE-->
-    <div class="d-flex flex-row justify-content-between kd-on">
+    <div class="d-flex flex-row justify-content-between kd-on sticky">
       <div class=" kd-on">
         <a href="" >
           <img src="NBICTLAB_LOGO.png" alt="NBICT LAB LOGO" class="pt-0">
@@ -32,7 +32,7 @@
     </div>
 
     <!-- 1.NAVBAR TOGLLE BUTTON-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky">
      
       <!-- 1.NAVBAR TOGLLE BUTTON-->
       <div class="navbar-toggler-right">
