--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <!-- KD CODE-->
     <div class="d-flex flex-row justify-content-between kd-on ">
       <div class=" kd-on">
-        <a href="" >
+        <a href="https://www.nbict.org/" >
           <img src="NBICTLAB_LOGO.png" alt="NBICT LAB LOGO" class="pt-0">
-          </a>
+        </a>
       </div>
       <div class=" kd-on pt-3">
         <a href="support@nbict.org" class="" >📧 support@nbict.org </a>
         <span> | </span>
         <a href="tel:01768-885966"> ☎ (+88) 01768-885966</a>
       </div>
-      <div class=" kd-on pt-2 pr-5">
+      <div class=" kd-on pt-2 pr-5 btn-nav">
         <a href="https://nbict.coursebangla.com/"></a>
         <button type="button" class="btn btn-success">START FREE COURSES</button></a>
       </div>
