--- a/index.html
+++ b/index.html
@@ -139,8 +139,29 @@
             </a>
           </div>
           <!-- / End Single Person -->
-          <!-- Start Single Person -->
-          <div class="col-sm-6 col-lg-4 col-xl-3 order-sm-2">
+           <!-- Start Single Person -->
+           <div class="col-sm-6 col-lg-4 col-xl-3 order-sm-2">
+            <a href="" target="_blank">
+            <div class="single-person">
+              <div class="person-image">
+                <img src="https://lh3.googleusercontent.com/a-/AOh14Ggm78B2Zb2vNScE80hZCbqI9BvXaBx-AHR8NoiB=s88-w88-h88-c-k" alt="">
+                <span class="icon">
+                  <i class="fas fa-tasks"></i>
+                </span>
+              </div>
+              <div class="person-info">
+                <h3 class="full-name">Md. Milon Ali</h3>
+                <span class="speciality">Co-Executive</span>
+              </div>
+            </div>
+            </a>
+          </div>
+          <!-- / End Single Person -->
+        </div>
+         
+          <div class="row justify-content-center">
+            <!-- Start Single Person -->
+          <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="https://nbict-lab.github.io/nayem/" target="_blank">
             <div class="single-person">
               <div class="person-image">
@@ -156,10 +177,8 @@
             </div>
             </a>
           </div>
-        </div>
-          <!-- / End Single Person -->
-          <!-- Start Single Person -->
-          <div class="row justify-content-center">
+           <!-- / End Single Person -->
+             <!-- Start Single Person -->
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <a href="" target="_blank">
             <div class="single-person">
@@ -267,24 +286,7 @@
             </a>
           </div>
           <!-- / End Single Person -->
-          <!-- Start Single Person -->
-          <div class="col-sm-6 col-lg-4 col-xl-3">
-            <a href="" target="_blank">
-            <div class="single-person">
-              <div class="person-image">
-                <img src="https://lh3.googleusercontent.com/a-/AOh14Ggm78B2Zb2vNScE80hZCbqI9BvXaBx-AHR8NoiB=s88-w88-h88-c-k" alt="">
-                <span class="icon">
-                  <i class="fas fa-tasks"></i>
-                </span>
-              </div>
-              <div class="person-info">
-                <h3 class="full-name">Md. Milon Ali</h3>
-                <span class="speciality">Intern (Teaching Assistant)</span>
-              </div>
-            </div>
-            </a>
-          </div>
-          <!-- / End Single Person -->
+         
         </div>
       </div>
   </section>
