--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <!-- / End Single Person -->
            <!-- Start Single Person -->
            <div class="col-sm-6 col-lg-4 col-xl-3 order-sm-2">
-            <a href="" target="_blank">
+            <a href="https://nbict-lab.github.io/milon/" target="_blank">
             <div class="single-person">
               <div class="person-image">
                 <img src="https://lh3.googleusercontent.com/a-/AOh14Ggm78B2Zb2vNScE80hZCbqI9BvXaBx-AHR8NoiB=s88-w88-h88-c-k" alt="">
